--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "supertest": "0.15.0"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": "=10.21.0"
   },
   "main": "./node/index",
   "bin": {
